[gd_scene load_steps=10 format=2]

[ext_resource path="res://Entities/Shield/Shield.gd" type="Script" id=1]
[ext_resource path="res://Entities/Shield/Shield Fly-5.png" type="Texture" id=2]
[ext_resource path="res://Entities/Shield/Shield Fly-6.png" type="Texture" id=3]
[ext_resource path="res://Entities/Shield/Shield Fly-3.png" type="Texture" id=4]
[ext_resource path="res://Entities/Shield/Shield Fly-4.png" type="Texture" id=5]
[ext_resource path="res://Entities/Shield/Shield Fly-1.png" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 2 ), ExtResource( 3 ) ],
"loop": false,
"name": "FlyFront",
"speed": 6.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 6 ) ],
"loop": false,
"name": "FlyBack",
"speed": 6.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 7.0
height = 2.0

[sub_resource type="Animation" id=3]
resource_name = "throw"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0.5 ) ]
}

[node name="Shield" type="Area2D"]
z_index = 1
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 0.343522 )
scale = Vector2( 1, 1.2 )
frames = SubResource( 1 )
animation = "FlyFront"
frame = 8
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = -1.57079
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/throw = SubResource( 3 )
[connection signal="body_entered" from="." to="." method="_on_Shield_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
